--- a/lesson4/4-02.html
+++ b/lesson4/4-02.html
@@ -10,17 +10,24 @@
 
 <body>
 
-<!--
+  <!--
   ul.container>li.item*6>img[src=img/$.png alt=$]
 -->
-<ul class="container">
-  <li class="item"><img src="img/1.png" alt="1"></li>
-  <li class="item"><img src="img/2.png" alt="2"></li>
-  <li class="item"><img src="img/3.png" alt="3"></li>
-  <li class="item"><img src="img/4.png" alt="4"></li>
-  <li class="item"><img src="img/5.png" alt="5"></li>
-  <li class="item"><img src="img/6.png" alt="6"></li>
-</ul>
+  <ul class="container">
+    <li class="item"><img src="img/1.png" alt="1"></li>
+    <li class="item"><img src="img/2.png" alt="2"></li>
+    <li class="item"><img src="img/3.png" alt="3"></li>
+    <li class="item"><img src="img/4.png" alt="4"></li>
+    <li class="item"><img src="img/5.png" alt="5"></li>
+    <li class="item"><img src="img/6.png" alt="6"></li>
+  </ul>
+
+  <div class="grid">
+    <div class="yellow">Yellow</div>
+    <div class="red">Red</div>
+    <div class="green">Green</div>
+    <div class="blue">Blue</div>
+  </div>
 
 </body>
 
