--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -80,23 +80,29 @@
   </main>
 
   <footer>
-    <p>初心者からちゃんとしたプロになる<br>Webデザイン基礎入門</p>
-    <ul>
-      <li>発売日：2019-09-25</li>
-      <li>仕様：B5変型判／336P</li>
-      <li>ISBN：978-4-8443-6890-8</li>
-    </ul>
+    <div class="book-info">
+      <div class="book-info-wrap">
+        <p>初心者からちゃんとしたプロになる<br>Webデザイン基礎入門</p>
+        <ul>
+          <li>発売日：2019-09-25</li>
+          <li>仕様：B5変型判／336P</li>
+          <li>ISBN：978-4-8443-6890-8</li>
+        </ul>
+      </div>
+    </div>
 
-    <ul>
-      <li>
-        <a href="https://www.facebook.com/mdnjp/?locale=ja_JP" target="_blank"><img src="img/facebook.svg"
-            alt="Facebook"></a>
-      </li>
-      <li>
-        <a href="https://twitter.com/MdN_WebBook" target="_blank"><img src="img/twitter.svg" alt="Twitter"></a>
-      </li>
-    </ul>
-    <p class="copyright"><small>&copy; MdN Corporation.</small></p>
+    <div class="footer-info">
+      <ul>
+        <li>
+          <a href="https://www.facebook.com/mdnjp/?locale=ja_JP" target="_blank"><img src="img/facebook.svg"
+              alt="Facebook"></a>
+        </li>
+        <li>
+          <a href="https://twitter.com/MdN_WebBook" target="_blank"><img src="img/twitter.svg" alt="Twitter"></a>
+        </li>
+      </ul>
+      <p class="copyright"><small>&copy; MdN Corporation.</small></p>
+    </div>
   </footer>
 
 </body>
