SPメニュー完成

--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -26,9 +26,16 @@
       </div>
       <nav class="sp-only">
         <div class="gnav-toggle">
+          <input type="checkbox" id="gnav-input" class="gnav-hidden">
+          <label for="gnav-input" id="gnav-open"><span></span></label>
+          <label for="gnav-input" class="gnav-unshown" id="gnav-close"></label>
           <div id="gnav-content">
-            ナビ
-            <ul class="gnav-menu"></ul>
+            <ul class="gnav-menu">
+              <li class="gnav-item"><a href="#service">Service<br>サービス</a></li>
+              <li class="gnav-item"><a href="#plan">Plan<br>プラン</a></li>
+              <li class="gnav-item"><a href="#access">Access<br>アクセス</a></li>
+              <li class="gnav-item"><a href="#contact">Contact<br>コンタクト</a></li>
+            </ul>
           </div>
         </div>
       </nav>
