--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -164,13 +164,24 @@
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12961.591619667677!2d139.7204376!3d35.6918247!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188d5bce063c37%3A0xb548b9250334152f!2z44Kk44Oz44K_44O844OX44Op44OzSVTjgrnjgq_jg7zjg6s!5e0!3m2!1sja!2sjp!4v1702531854009!5m2!1sja!2sjp"
           width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
+          referrerpolicy="no-referrer-when-downgrade" class="access-map"></iframe>
       </div>
     </section>
 
-    <div class="pagetop"></div>
+    <div class="pagetop">
+      <a href="#mv">ページトップ</a>
+    </div>
   </main>
-  <footer></footer>
+  <footer class="foot-area">
+    <div class="inner">
+      <div class="logo-area foot-logo">
+        <img src="img/site-logo_w.svg" alt="rental space MdN">
+      </div>
+      <p class="txt-center">見学やセミナーのご相談など<br class="sp-only">お気軽にご連絡ください。</p>
+      <address class="text-phone">TEL: <a href="tel:00-1234-5678">00-1234-5678</a></address>
+    </div>
+    <small class="foot-area_copy">&copy; MdN Corporation.</small>
+  </footer>
 
 </body>
 
