profileページの経歴部分まで作成

--- a/lesson8/works.html
+++ b/lesson8/works.html
@@ -42,11 +42,7 @@
     </ul>
   </header>
 
-  <main>
-    <h1 class="top-title">
-      <i>Photographer</i> Rin Harumoto
-    </h1>
-  </main>
+  <main></main>
 
   <footer class="footer">
     <p class="footer-txt">
