--- a/lesson8/works.html
+++ b/lesson8/works.html
@@ -10,10 +10,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;900&family=Romanesco&display=swap"
     rel="stylesheet">
+
+  <!-- fancybox -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="top">
+<body class="works">
 
   <header class="header">
     <h1 class="header-logo">
@@ -42,13 +46,36 @@
     </ul>
   </header>
 
-  <main></main>
+  <main>
+
+    <h1 class="article-title"></h1>
+    <ul class="works-list">
+      <li><a href="img/photo-img_01.jpg" data-fancybox="works" data-caption="地球儀"><img src="img/thumbnails/photo-thumb_01.jpg" alt=""></a>
+      </li>
+      <li><a href="img/photo-img_02.jpg" data-fancybox="works"><img src="img/thumbnails/photo-thumb_02.jpg" alt=""></a>
+      </li>
+      <li><a href="img/photo-img_03.jpg" data-fancybox="works"><img src="img/thumbnails/photo-thumb_03.jpg" alt=""></a>
+      </li>
+      <li><a href="#"><img src="img/thumbnails/photo-thumb_04.jpg" alt=""></a></li>
+      <li><a href="#"><img src="img/thumbnails/photo-thumb_05.jpg" alt=""></a></li>
+      <li><a href="#"><img src="img/thumbnails/photo-thumb_06.jpg" alt=""></a></li>
+      <li><a href="#"><img src="img/thumbnails/photo-thumb_07.jpg" alt=""></a></li>
+      <li><a href="#"><img src="img/thumbnails/photo-thumb_08.jpg" alt=""></a></li>
+      <li><a href="#"><img src="img/thumbnails/photo-thumb_09.jpg" alt=""></a></li>
+      <li><a href="#"><img src="img/thumbnails/photo-thumb_10.jpg" alt=""></a></li>
+      <li><a href="#"><img src="img/thumbnails/photo-thumb_11.jpg" alt=""></a></li>
+      <li><a href="#"><img src="img/thumbnails/photo-thumb_12.jpg" alt=""></a></li>
+    </ul>
+
+  </main>
 
   <footer class="footer">
     <p class="footer-txt">
       &copy; MdN Corporation.
     </p>
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 
   <script src="js/script.js"></script>
 </body>
